fixed right  sidebar scrolling on smaller displays

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -394,7 +394,7 @@ html, body{
 //------------------------------------------------------------------------------
 
 #waypoint-list{
-  max-height: 80vh;
+  max-height: 60vh;
   overflow-y: auto;
 }
 .waypoint-container{
@@ -578,10 +578,12 @@ button.waypoint-remove{
 .panel-default{
   border: none;
 }
+.sidebar-body{
+  overflow-y: auto;
+  max-height: 75vh;
+}
 .sidebar-accordion-body{
   position: relative;
-  max-height: 60vh;
-  overflow-y: auto;
   padding: 0;
   transition: .5s ease-in-out;
 }
